[tool.poetry]
name = "texture-scripts"
version = "0.1.0"
description = ""
authors = ["Molly Jones <mojones.e@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.10"
librosa = "^0.10.0"
soundfile = "^0.12.1"
matplotlib = "^3.7.0"
numpy = "1.23.5"
numba = "0.56.2"
scipy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
